--- a/src/yaml.yaml
+++ b/src/yaml.yaml
@@ -39,3 +39,35 @@
   email: "iov@example.com"
   telegram: "@iov"
   git: "https://github.com/iov"
+- id: 8
+  lastName: "Иванов"
+  firstName: "Иван"
+  surname: "Иванович"
+  phone: "+79999999999"
+  email: "ivanov@example.com"
+  telegram: "@ivanov"
+  git: "https://github.com/ivanov"
+- id: 9
+  lastName: "Иванов"
+  firstName: "Иван"
+  surname: "Иванович"
+  phone: "+79999999999"
+  email: "ivanov@example.com"
+  telegram: "@ivanov"
+  git: "https://github.com/ivanov"
+- id: 10
+  lastName: "Спиридонов"
+  firstName: "Данил"
+  surname: "Игоревич"
+  phone: "+79999999999"
+  email: "daniil@example.com"
+  telegram: "@daniil"
+  git: "https://github.com/daniil"
+- id: 11
+  lastName: "Ганс"
+  firstName: "Йохан"
+  surname: "Игаев"
+  phone: "+79999999999"
+  email: "iov@example.com"
+  telegram: "@iov"
+  git: "https://github.com/iov"
